--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,5 +23,7 @@
     <string name="name">Name</string>
     <string name="email">email</string>
     <string name="todo">TODO</string>
+    <string name="event_title">event_title</string>
+    <string name="event_location">event_title</string>
 
 </resources>
