--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,15 @@
     <string name="todo">TODO</string>
     <string name="event_title">event_title</string>
     <string name="event_location">event_title</string>
+    <string name="favorite">favorite</string>
+    <string name="content_description_favorite">favorite description</string>
+    <string name="search">search</string>
+    <string name="content_description_search">search_description</string>
+    <string name="more">more icon</string>
+    <string name="content_description_more">more description</string>
+    <string name="com_latifah_techbook_ui_fragments_contactfragment">com.latifah.techbook.ui.fragments.ContactFragment</string>
+    <string name="Contacts">Contacts</string>
+    <string name="content_description_one">description</string>
+    <string name="first_name">First Name</string>
 
 </resources>
